pkg/ibmvpc/examples/out/explain_out/NACLQueryAllowSubset_all_vpcs_explain_debug.txt
Explaining connectivity from vsi1-ky to 161.26.0.0/16 within test-vpc1-ky using "protocol: UDP"
===============================================================================================

Connection are allowed from vsi1-ky[10.240.10.4] to Public Internet 161.26.0.0/16 using "protocol: UDP src-ports: 1-600 dst-ports: 1-50"
(note that not all queried protocols/ports are allowed)
Path:
	vsi1-ky[10.240.10.4] -> security group sg1-ky -> subnet1-ky -> network ACL acl1-ky -> 
	PublicGateway public-gw-ky -> 
	Public Internet 161.26.0.0/16


Details:
~~~~~~~~
Egress:
security group sg1-ky allows connection with the following allow rules
	index: 0, direction: outbound, protocol: all, cidr: 0.0.0.0/0
network ACL acl1-ky allows connection with the following allow rules
	index: 1, direction: outbound , src: 10.240.10.0/24 , dst: 161.26.0.0/16, conn: protocol: udp, srcPorts: 1-600, dstPorts: 1-50, action: allow

------------------------------------------------------------------------------------------------------------------------
